--- a/ecr-image-deploy-buildspec.yml
+++ b/ecr-image-deploy-buildspec.yml
@@ -7,7 +7,7 @@ phases:
 
   pre-build:
     commands:
-      - REPOSITORY_URI=$113184785079.dkr.ecr.ap-south-1.amazonaws.com/ECRTestRepository
+      - REPOSITORY_URI=${accountID}.dkr.ecr.${AWS_REGION}.amazonaws.com/ecr-test
       - echo my repo url is $REPOSITORY_URI
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
@@ -17,15 +17,20 @@ phases:
       - docker --version
       - aws --version
       - echo Build started on `date`
+      
       - docker build --build-arg STAGE=$Stage -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
+      - aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${accountID}.dkr.ecr.${AWS_REGION}.amazonaws.com
+      - echo Repository Latest $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:latest
+      - echo Repository Image $REPOSITORY_URI:$IMAGE_TAG
       - docker push $REPOSITORY_URI:$IMAGE_TAG
 artifacts:
   type: zip
   files:
+    - template-export.yml
     - buildspec.yml
     - template.yaml
