--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,10 +10,11 @@ phases:
      commands:
      - |
           #Package cloudFormation and create an export file (-secondary required for backwards compatibility for production release)
-          aws cloudformation package --template-file template.yaml --s3-bucket "$S3_BUCKET" --s3-prefix $PROJECT_NAME --output-template-file template-export.yml --metadata "codeBuildId"=$CODEBUILD_BUILD_ID
+          aws cloudformation package --template-file template.yaml --s3-bucket "$S3_BUCKET" --s3-prefix $PROJECT_NAME --output-template-file template-export.yml 
+          #--metadata "codeBuildId"=$CODEBUILD_BUILD_ID
   post_build:
     commands:
-    - node InitiateDeployment
+    - echo "build"
       
 artifacts:
   type: zip
