--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
 artifacts:
   type: zip
   files:
-    - template.export.yml
+    - template.export.yaml
     - buildspec.yml
     - template.yaml
     
