--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,8 @@ phases:
      commands:
      - |
           
-          aws cloudformation package --template-file template.yaml --s3-bucket "shaurya-ecs" --s3-prefix serverless-applicatio --output-template-file template.export.yaml 
+          aws cloudformation package --template-file template.yaml --stack-name ecr-repository --capabilities CAPABILITY_NAMED_IAM --profile default --parameter-overrides IAMUserName=ecr-deploy
+          #aws cloudformation package --template-file template.yaml --s3-bucket "shaurya-ecs" --s3-prefix serverless-applicatio --output-template-file template.export.yaml 
           #aws cloudformation package --template-file template.yaml --s3-bucket "$S3_BUCKET" 
           #--s3-prefix $serverless-application --output-template-file template-export.yml --metadata "codeBuildId"=$CODEBUILD_BUILD_ID,"ENVIRONMENT"=$Stage
           #aws cloudformation package --template-file template.yaml --s3-bucket "$S3_BUCKET" --s3-prefix $serverless-application --output-template-file template-export-secondary.yml --metadata "codeBuildId"=$CODEBUILD_BUILD_ID,"ENVIRONMENT"=$Stage
