--- a/ecr-image-deploy-buildspec.yml
+++ b/ecr-image-deploy-buildspec.yml
@@ -5,7 +5,7 @@ phases:
 
   pre_build:
     commands:
-      - $(aws ecr get-login --region ap-south-1 --no-include-email)
+      #- $(aws ecr get-login --region ap-south-1 --no-include-email)
       - REPOSITORY_URI=113184785079.dkr.ecr.ap-south-1.amazonaws.com/ecr-test
       - echo my repo url is $REPOSITORY_URI
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
