--- a/ecr-image-deploy-buildspec.yml
+++ b/ecr-image-deploy-buildspec.yml
@@ -5,7 +5,7 @@ phases:
 
   pre_build:
     commands:
-      #- $(aws ecr get-login --region ap-south-1 --no-include-email)
+      - $(aws ecr get-login --region ap-south-1 --no-include-email)
       - REPOSITORY_URI=113184785079.dkr.ecr.ap-south-1.amazonaws.com/ecr-test
       - echo my repo url is $REPOSITORY_URI
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
@@ -22,7 +22,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${accountID}.dkr.ecr.${AWS_REGION}.amazonaws.com
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 113184785079.dkr.ecr.ap-south-1.amazonaws.com
       - echo Repository Latest $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:latest
       - echo Repository Image $REPOSITORY_URI:$IMAGE_TAG
