--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
           aws cloudformation package --template-file template.yaml --s3-bucket "shaurya-ecs" --s3-prefix serverless-applicatio --output-template-file template.export.yaml 
           #aws cloudformation package --template-file template.yaml --s3-bucket "$S3_BUCKET" 
           #--s3-prefix $serverless-application --output-template-file template-export.yml --metadata "codeBuildId"=$CODEBUILD_BUILD_ID,"ENVIRONMENT"=$Stage
-          #aws cloudformation package --template-file template.yaml --s3-bucket "$S3_BUCKET" --s3-prefix $serverless-application --output-template-file template-export-secondary.yml --metadata "codeBuildId"=$CODEBUILD_BUILD_ID,"ENVIRONMENT"=$Stage
+          aws cloudformation package --template-file template.yaml --s3-bucket "shaurya-ecs" --s3-prefix $serverless-application --output-template-file template-export-secondary.yml --metadata "codeBuildId"=$CODEBUILD_BUILD_ID,"ENVIRONMENT"=$Stage
   post_build:
     commands:
     - echo "build"
@@ -25,4 +25,5 @@ artifacts:
     - template.export.yaml
     - buildspec.yml
     - template.yaml
+    - template-export-secondary.yml
     
