--- a/ecr-image-deploy-buildspec.yml
+++ b/ecr-image-deploy-buildspec.yml
@@ -21,7 +21,7 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      
+      - echo Writing image definitions file...
 artifacts:
   type: zip
   files:
