--- a/ecr-image-deploy-buildspec.yml
+++ b/ecr-image-deploy-buildspec.yml
@@ -14,13 +14,16 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
+      - docker build -t demo1212 .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker tag demo1212:latest 113184785079.dkr.ecr.ap-south-1.amazonaws.com/demo1212:latest
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      #- docker push $REPOSITORY_URI:latest
+      - docker push 113184785079.dkr.ecr.ap-south-1.amazonaws.com/demo1212:latest
+      #- docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
 artifacts:
   type: zip
