--- a/ecr-image-deploy-buildspec.yml
+++ b/ecr-image-deploy-buildspec.yml
@@ -6,24 +6,24 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 113184785079.dkr.ecr.ap-south-1.amazonaws.com
-      - REPOSITORY_URI=113184785079.dkr.ecr.ap-south-1.amazonaws.com/demo1212
+      - REPOSITORY_URI=113184785079.dkr.ecr.ap-south-1.amazonaws.com/test-repository
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      #- docker build -t $REPOSITORY_URI:latest .
-      - docker build -t demo1212 .
-      #- docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
-      - docker tag demo1212:latest 113184785079.dkr.ecr.ap-south-1.amazonaws.com/demo1212:latest
+      - docker build -t $REPOSITORY_URI:latest .
+      #- docker build -t demo1212 .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      #- docker tag demo1212:latest 113184785079.dkr.ecr.ap-south-1.amazonaws.com/demo1212:latest
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      #- docker push $REPOSITORY_URI:latest
-      - docker push 113184785079.dkr.ecr.ap-south-1.amazonaws.com/demo1212:latest
-      #- docker push $REPOSITORY_URI:$IMAGE_TAG
+      - docker push $REPOSITORY_URI:latest
+      #- docker push 113184785079.dkr.ecr.ap-south-1.amazonaws.com/demo1212:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
 artifacts:
   type: zip
